--- a/src/main/resources/templates/organisation_home.html
+++ b/src/main/resources/templates/organisation_home.html
@@ -13,7 +13,7 @@
     <header class="header">
 
         <div class="logo-container">
-            <img src="/images/logo.png" alt="logo" class="logo">
+            <img src="/images/logotst.png" alt="logo" class="logo">
         </div>
 
         <nav class="nav-menu">
@@ -46,60 +46,6 @@
 
         <div class="projects-container">
 
-            <div class="project">
-
-                <section class="img-container">
-                        <img src="/images/logo2mini.jpg" alt="Zdjęcie projektu" class="project-img">
-                </section>
-
-                <section class="text-container">
-
-                    <h2 class="project-tittle">Projekt 1</h2>
-                    <p class="project-short-desc">Krótki opis projektuKrótki opis projektuKrótki opis projektuKrótki opis projektu
-                        Krótki opis projektuKrótki opis projektuKrótki opis projektuKrótki opis projektuKrótki opis projektuKrótki opis projektu
-                        Krótki opis projektuKrótki opis projektuKrótki opis projektu
-                        Krótki opis projektuKrótki opis projektuKrótki opis projektuKrótki opis projektuKrótki opis projektu
-                        Krótki opis projektuKrótki opis projektuKrótki opis projektuKrótki opis projektu
-                        Krótki opis projektuKrótki opis projektuKrótki opis projektuKrótki opis projektu
-                    </p>
-
-                    <h4 class="tags">Tagi: Edukacja, Środowisko i ekologia</h4>
-
-                    <button type="button" class="project-join-button">Szczegóły</button>
-
-                </section>
-
-                
-
-            </div>
-
-            <div class="project">
-
-                <section class="img-container">
-                        <img src="/images/strona-glowna.jfif" alt="Zdjęcie projektu" class="project-img">
-                </section>
-
-                <section class="text-container">
-
-                    <h2 class="project-tittle">Projekt 1</h2>
-                    <p class="project-short-desc">Krótki opis projektuKrótki opis projektuKrótki opis projektuKrótki opis projektu
-                        Krótki opis projektuKrótki opis projektuKrótki opis projektuKrótki opis projektuKrótki opis projektuKrótki opis projektu
-                        Krótki opis projektuKrótki opis projektuKrótki opis projektu
-                        Krótki opis projektuKrótki opis projektuKrótki opis projektuKrótki opis projektuKrótki opis projektu
-                        Krótki opis projektuKrótki opis projektuKrótki opis projektuKrótki opis projektu
-                        Krótki opis projektuKrótki opis projektuKrótki opis projektuKrótki opis projektu
-                    </p>
-
-                    <h4 class="tags">Tagi: Edukacja, Środowisko i ekologia</h4>
-
-                    <button type="button" class="project-desc-button">Szczegóły</button>
-
-                </section>
-
-                
-
-            </div>
-
         </div>
         
 
@@ -109,7 +55,7 @@
 
     <footer class="footer">
 
-        <div class="footer-col1"><img src="images/logo2mini.png" alt=""></div>
+        <div class="footer-col1"><img src="/images/logotst.png" alt="logo"></div>
         <div class="footer-col2">col2</div>
         <div class="footer-col3">col3</div>
         <div class="footer-col4">col4</div>
