--- a/src/main/resources/templates/create_project.html
+++ b/src/main/resources/templates/create_project.html
@@ -22,7 +22,7 @@
     <header class="header">
 
         <div class="logo-container">
-            <img src="images/logo.png" alt="logo" class="logo">
+            <img src="/images/logotst.png" alt="logo" class="logo">
         </div>
 
         <nav class="nav-menu">
@@ -76,7 +76,7 @@
 
         </section>
 
-        <section class="tasks-container" id = "tasks-container" >
+        <section class="tasks-container" id = "tasks-container" style = "display:none">
 
            
 
@@ -153,7 +153,7 @@
 
     <footer class="footer">
 
-        <div class="footer-col1"><img src="images/logo2mini.png" alt=""></div>
+        <div class="footer-col1"><img src="/images/logotst.png" alt=""></div>
         <div class="footer-col2">col2</div>
         <div class="footer-col3">col3</div>
         <div class="footer-col4">col4</div>
