--- a/src/main/resources/templates/css/organisation-profile.css
+++ b/src/main/resources/templates/css/organisation-profile.css
@@ -70,7 +70,7 @@ div.text-container {
 div.text-container > button.profile-edit-button {
     display:block;
     width:40%;
-    height:10%;
+    height:3em;
     position:absolute;
     right:0;
     bottom:0;
