--- a/src/main/resources/templates/edit_project_tasks.html
+++ b/src/main/resources/templates/edit_project_tasks.html
@@ -18,7 +18,7 @@
     <header class="header">
 
         <div class="logo-container">
-            <img src="images/logo.png" alt="logo" class="logo">
+            <img src="/images/logotst.png" alt="logo" class="logo">
         </div>
 
         <nav class="nav-menu">
@@ -41,8 +41,8 @@
     <hr class="section-line">
 
     <section class="project-nav-container">
-        <button type="button" class="desc-managment" >Projekt</button>
-        <button type="button" class="tasks-managment active">Zadania</button>
+        <button type="button" class="desc-managment" onclick = "goToEditDesc()">Projekt</button>
+        <button type="button" class="tasks-managment active" onclick = "goToEditTasks()">Zadania</button>
     </section>
 
     <main class="main">
@@ -139,7 +139,7 @@
 
     <footer class="footer">
 
-        <div class="footer-col1"><img src="images/logo2mini.png" alt=""></div>
+        <div class="footer-col1"><img src="/images/logotst.png" alt="logo"></div>
         <div class="footer-col2">col2</div>
         <div class="footer-col3">col3</div>
         <div class="footer-col4">col4</div>
@@ -195,6 +195,20 @@
 
         }
 
+        function printVolunteersInAddTask(volunteer, root, isSuggested) {
+                        const div = document.createElement("div");
+                        div.classList.add("volunteer");
+                        if (!isSuggested){
+                            div.innerHTML = "<span>" + volunteer.fnameAndLname[0] + "</span> " + volunteer.fnameAndLname + 
+                            '<button type = "button" class="add-volunteer-to-task-button" onclick = "addVolunteerToTask(' + volunteer.id + ', this)"> Dodaj </button>';
+                        } else {
+                            div.innerHTML = "<span>" + volunteer.fnameAndLname[0] + "</span> " + volunteer.fnameAndLname + 
+                            '<button type = "button" class="add-volunteer-to-task-button" onclick = "addVolunteerToTask(' + volunteer.id + ', this)"> Dodaj </button> <output> Chęć uczestwnictwa </output>';
+                        }
+
+                        root.appendChild(div);
+        }
+
         async function getVolunteersByProject() {
 
             const root = document.getElementById("volunteers");
@@ -209,26 +223,55 @@
                     },
                 });
 
-                if (response.ok) {
+                    const volunteersWithSuggestedTasksResponse = await fetch('http://localhost:8080/api/volunteer/withSuggestedTasks/' +taskId + '/project/' + projectId, {
+                    method: 'GET',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                });
 
-                    const result = await response.json();
+                const volunteersToSkip = [];
 
-                    console.log(result);
+                if (volunteersWithSuggestedTasksResponse.ok) {
 
-                    result.forEach(volunteer => {
 
-                        console.log(volunteer);
+                    const suggestedVolunteers = await volunteersWithSuggestedTasksResponse.json();
 
-                        const div = document.createElement("div");
-                        div.classList.add("volunteer");
-                        div.innerHTML = "<span>" + volunteer.fnameAndLname[0] + "</span> " + volunteer.fnameAndLname + 
-                        '<button type = "button" class="add-volunteer-to-task-button" onclick = "addVolunteerToTask(' + volunteer.id + ', this)"> Dodaj </button>';
+                    console.log(suggestedVolunteers)
 
-                        root.appendChild(div);
-                        
-                    });
+                    if (response.ok) {
+
+                        const result = await response.json();
+
+                        console.log(result);
+
+                        result.forEach(volunteer1 => {
+
+                            suggestedVolunteers.forEach(volunteer2 => {
+
+                                if (volunteer1.email == volunteer2.email) {
+                                    printVolunteersInAddTask(volunteer1, root, true);
+                                    volunteersToSkip.push(volunteer1);
+                                }
+
+                            })
+
+                        })
+
+                        console.log(volunteersToSkip);
+
+                        result.forEach(volunteer => {
+
+                            if (!volunteersToSkip.includes(volunteer)) {
+                                printVolunteersInAddTask(volunteer, root, false);
+                            }
+
+                        });
+                    }
 
                 }
+
+
 
             } catch (error) {
                 console.log(error);
@@ -603,6 +646,18 @@
         document.getElementById("task").addEventListener("change", getVolunteersByProject);
 
         document.getElementById("task").addEventListener("change", getVolunteersByProjectToDelete);
+
+        function goToEditDesc() {
+
+            location.href = "http://localhost:8080/organisation/projects/edit/desc/" + projectId;
+
+        }
+
+    function goToEditTasks() {
+
+        location.href = "http://localhost:8080/organisation/projects/edit/tasks/" + projectId;
+
+        }
 
         
 
