--- a/src/main/resources/templates/organisation_project_desc.html
+++ b/src/main/resources/templates/organisation_project_desc.html
@@ -12,7 +12,7 @@
     <header class="header">
 
         <div class="logo-container">
-            <img src="images/logo.png" alt="logo" class="logo">
+            <img src="/images/logotst.png" alt="logo" class="logo">
         </div>
 
         <nav class="nav-menu">
@@ -50,35 +50,7 @@
 
             <div class="tasks" id="tasks">
 
-                <div class="task">
-
-                    <h2 class="task-tittle">Zadanie 1</h2>
-
-                    <p class="task-desc">opis zadania</p>
-
-                    <span class="priority">Priorytet - wysoki</span>
-
-                </div>
-
-                <div class="task">
-
-                    <h2 class="task-tittle">Zadanie 1</h2>
-
-                    <p class="task-desc">opis zadania</p>
-
-                    <span class="priority">Priorytet - wysoki</span>
-
-                </div>
-
-                <div class="task">
-
-                    <h2 class="task-tittle">Zadanie 1</h2>
-
-                    <p class="task-desc">opis zadania</p>
-
-                    <span class="priority">Priorytet - wysoki</span>
-
-                </div>
+                
 
             </div>
 
@@ -103,7 +75,7 @@
 
     <footer class="footer">
 
-        <div class="footer-col1"><img src="images/logo2mini.png" alt=""></div>
+        <div class="footer-col1"><img src="/images/logotst.png" alt="logo"></div>
         <div class="footer-col2">col2</div>
         <div class="footer-col3">col3</div>
         <div class="footer-col4">col4</div>
