--- a/src/main/resources/templates/volunteer_profile.html
+++ b/src/main/resources/templates/volunteer_profile.html
@@ -13,7 +13,7 @@
     <header class="header">
 
         <div class="logo-container">
-            <img src="/images/logo.png" alt="logo" class="logo">
+            <img src="/images/logotst.png" alt="logo" class="logo">
         </div>
 
         <nav class="nav-menu">
@@ -91,7 +91,7 @@
 
     <footer class="footer">
 
-        <div class="footer-col1"><img src="images/logo2mini.png" alt=""></div>
+        <div class="footer-col1"><img src="/images/logotst.png" alt="logo"></div>
         <div class="footer-col2">col2</div>
         <div class="footer-col3">col3</div>
         <div class="footer-col4">col4</div>
