--- a/src/main/resources/templates/volunteer_project_desc.html
+++ b/src/main/resources/templates/volunteer_project_desc.html
@@ -12,7 +12,7 @@
     <header class="header">
 
         <div class="logo-container">
-            <img src="images/logo.png" alt="logo" class="logo">
+            <img src="/images/logotst.png" alt="logo" class="logo">
         </div>
 
         <nav class="nav-menu">
@@ -60,7 +60,7 @@
 
     <footer class="footer">
 
-        <div class="footer-col1"><img src="images/logo2mini.png" alt=""></div>
+        <div class="footer-col1"><img src="/images/logotst.png" alt="logo"></div>
         <div class="footer-col2">col2</div>
         <div class="footer-col3">col3</div>
         <div class="footer-col4">col4</div>
@@ -71,6 +71,68 @@
 
         const urlArray = window.location.href.split("/");
         const projectId = urlArray.at(-1);
+
+        const priorityArray = [
+                "Niski",
+                "Umiarkowany",
+                "Średni",
+                "Wysoki"]
+
+        function printTasks(task, root, isNotAttended, isSuggested) {
+
+            const div = document.createElement("div");
+            div.classList.add("task");
+
+            const h2 = document.createElement("h2");
+            h2.classList.add("task-tittle");
+            h2.innerHTML = task["task-title"];
+
+            const p = document.createElement("p");
+            p.classList.add("task-desc");
+            p.innerHTML = task["task-desc"];
+
+            const span = document.createElement("span");
+            span.classList.add("priority");
+            span.innerHTML = "Priorytet - " + priorityArray[task.priority - 1] + ", termin - " + task.deadline;
+
+            if (isNotAttended) {
+
+                const button = document.createElement("button");
+                button.classList.add("join-task");
+                button.type = "button";
+                button.dataset.taskId = task.id;
+                button.innerHTML = "Zgłoś chęć uczestniczenia";
+                button.onclick = joinTask;
+
+                div.appendChild(h2);
+                div.appendChild(p);
+                div.appendChild(span);
+                div.appendChild(button);
+
+                root.appendChild(div);
+                
+
+            } else  if(isSuggested) {
+                span.innerHTML += " - Zgłoszono chęć uczestniczenia";
+
+                div.appendChild(h2);
+                div.appendChild(p);
+                div.appendChild(span);
+
+                root.appendChild(div);
+            } else {
+                span.innerHTML += " - uczestniczysz w tym zadaniu";
+
+                div.appendChild(h2);
+                div.appendChild(p);
+                div.appendChild(span);
+
+                root.appendChild(div);
+            }
+
+            
+
+        } 
 
         async function getProject() {
                 
@@ -150,11 +212,7 @@
 
             const root = document.getElementById("tasks");
 
-            const priorityArray = [
-                "Niski",
-                "Umiarkowany",
-                "Średni",
-                "Wysoki"]
+            
 
             try {
                     const response = await fetch('http://localhost:8080/api/task/volunteer/project/' + projectId, {
@@ -164,6 +222,8 @@
                     },
                 });
 
+
+
                 if (response.ok) {
 
                     const result = await response.json();
@@ -172,26 +232,57 @@
 
                     result.forEach(task => {
 
-                        const div = document.createElement("div");
-                        div.classList.add("task");
+                        printTasks(task, root, false);
+                        
+                    });
 
-                        const h2 = document.createElement("h2");
-                        h2.classList.add("task-tittle");
-                        h2.innerHTML = task["task-title"];
+                }
 
-                        const p = document.createElement("p");
-                        p.classList.add("task-desc");
-                        p.innerHTML = task["task-desc"];
+                const notAttendedTasks = await fetch('http://localhost:8080/api/task/notAttended/volunteer/project/' + projectId, {
+                    method: 'GET',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                });
 
-                        const span = document.createElement("span");
-                        span.classList.add("priority");
-                        span.innerHTML = "Priorytet - " + priorityArray[task.priority - 1] + ", termin - " + task.deadline;
+                const suggestedTasks = await fetch('http://localhost:8080/api/task/suggested/volunteer/project/' + projectId, {
+                    method: 'GET',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                });
 
-                        div.appendChild(h2);
-                        div.appendChild(p);
-                        div.appendChild(span);
 
-                        root.appendChild(div);
+                if (notAttendedTasks.ok) {
+
+                    const resultTasks = await notAttendedTasks.json();
+
+                    const resultSuggestedTasks = await suggestedTasks.json();
+
+                    console.log(resultTasks);
+
+                    console.log(resultSuggestedTasks);
+
+                    const taskToSkip = [];
+
+                    resultTasks.forEach(task1 => {
+
+                        resultSuggestedTasks.forEach(task2 => {
+
+                            if (task1.id == task2.id) {
+                                printTasks(task1, root, false, true);
+                                taskToSkip.push(task1);
+                            }
+
+                        })
+
+                    })
+
+                    
+
+                    resultTasks.forEach(task => {
+                        if (!taskToSkip.includes(task))
+                        printTasks(task, root, true, false);
                         
                     });
 
@@ -202,6 +293,31 @@
             }
 
         }
+
+        async function joinTask() {
+
+            taskId = this.dataset.taskId;
+
+            try {
+                    const response = await fetch(`http://localhost:8080/api/task/${taskId}/suggested/volunteer`, {
+                    method: 'PUT',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                });
+
+                if (response.ok) {
+                    const output = document.createElement("output");
+                    output.innerHTML = await response.text();
+                    this.replaceWith(output);
+                }
+
+            } catch (error) {
+                console.log(error);
+            }
+
+        }
+
 
         function loadContent() {
 
