--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
     <header class="header">
 
         <div class="logo-container">
-            <img src="images/logo.png" alt="logo" class="logo">
+            <img src="images/logotst.png" alt="logo" class="logo">
         </div>
 
         <nav class="nav-menu">
@@ -40,7 +40,7 @@
         <div class="content-container">
 
             <div class="img-container">
-                <img src="images/strona-glowna.jfif" alt="zdjecie">
+                <img src="images/logo.png" alt="zdjecie">
             </div>
 
             <div class="text-container">
@@ -53,7 +53,15 @@
                 </h3>
 
                 <p class="desc-long">
-                    Body text for your whole article or post. We’ll put in some lorem ipsum to show how a filled-out page might look: <br> <br>Excepteur efficient emerging, minim veniam anim aute carefully curated Ginza conversation exquisite perfect nostrud nisi intricate Content. Qui  international first-class nulla ut. Punctual adipisicing, essential lovely queen tempor eiusmod irure. Exclusive izakaya charming Scandinavian impeccable aute quality of life soft power pariatur Melbourne occaecat discerning. Qui wardrobe aliquip, et Porter destination Toto remarkable officia Helsinki excepteur Basset hound. Zürich sleepy perfect consectetur.
+                   
+                    Chcesz wziąć udział w akcjach wolontariackich lub stworzyć projekt i zarządzać nim w wygodny sposób?
+                    Nie chcesz tracić czasu na przeskakiwanie między stronami organizacji w celu wyszukania interesującej Cię działalności?
+                    Dzięki <strong>VolunAct</strong> jest to możliwe. <br> <br>
+
+                    Strona jest przeznaczona dla osób biorących czynny udział w projektach wolontariackich, organizacji je tworzących, jak i 
+                    nowych człontów dopiero wchodzących w ten obszar działalności. <strong>VolunAct</strong> zapewnia komfort użytkowania, tworzenia i zarządzania
+                    projektami. W zalezności od tego kim jesteś, utwórz konto już teraz i zacznij działać w sprawie wyższej pomagając innym.
+
                 </p>
             </div>
 
