--- a/src/main/resources/templates/organisation_profile.html
+++ b/src/main/resources/templates/organisation_profile.html
@@ -243,7 +243,7 @@
                         button.type = "button";
                         button.classList.add("profile-edit-button");
                         button.innerHTML = "Edytuj opis";
-                        button.addEventListener("click", goToEditDesc);
+                        button.src = 'http://localhost:8080/organisation/profile/edit/desc';
 
                         textDiv.appendChild(descParagraph);
                         textDiv.appendChild(button);
