--- a/src/main/resources/static/css/main-page.css
+++ b/src/main/resources/static/css/main-page.css
@@ -94,8 +94,8 @@ body, html {
     */
 
 .content-container {
-    background-color: rgb(173, 178, 229);
-    background-image: linear-gradient(rgb(173, 178, 229),rgb(115,124,255) );
+    background-color: #d5c8f5;
+   /* background-image: linear-gradient(rgb(173, 178, 229),rgb(115,124,255) );*/
     border-radius:2em;
     display:grid;
     grid-template-columns: 40% 60%;
