--- a/src/main/resources/static/css/organisation-project-desc.css
+++ b/src/main/resources/static/css/organisation-project-desc.css
@@ -13,23 +13,23 @@
 .main {
     display: grid;
     grid-template-areas: 'project volunteers' 'project tasks';
-    grid-template-columns: 65% 30%;
-    gap:0.5em;
+    grid-template-columns: 70% 25%;
+    row-gap:1em;
     justify-content: center;
     align-items: center;
     
 }
 
 section.project-container {
-    background-color: rgb(173, 178, 229);
-    background-image: linear-gradient(rgb(173, 178, 229),rgb(115,124,255) );
+    background-color: #d5c8f5;
+    /*background-image: linear-gradient(rgb(173, 178, 229),rgb(115,124,255) );*/
     display: grid;
     justify-content: center;
-    grid-template-columns: 40% 50%;
+    grid-template-columns: 50% 45%;
     gap:1em;
     border-radius: 2em;
     min-width:600px;
-    max-width:800px;
+    max-width:900px;
     box-shadow: 0.5em 0.5em 2em rgba(101,85,143,0.80);
 }
 
@@ -40,15 +40,14 @@ section.project-container {
 .img-container {
     text-align: center;
     margin:auto;
-    height:80%;
-    
+ 
 }
 
 .project-img {
-    width:100%;
-    height:100%;
-    object-fit: cover;
-    border-radius:2em;
+    width:max(300px, 100%);
+    height:max(300px, 100%);
+    border-radius: 2em;
+    object-fit:fill;
 }
 
 .project-short-desc{
@@ -57,8 +56,8 @@ section.project-container {
 
 
 section.tasks-container, section.volunteers-container {
-    background-color: rgb(173, 178, 229);
-    background-image: linear-gradient(rgb(173, 178, 229),rgb(115,124,255) );
+    background-color: #d5c8f5;
+    /*background-image: linear-gradient(rgb(173, 178, 229),rgb(115,124,255) );*/
     border-radius: 2em;
     text-align: center;
     height:100%;
@@ -81,8 +80,8 @@ section.tasks-container, section.volunteers-container {
 }
 
 .task, .volunteer {
-    background-color: rgb(173, 178, 229);
-    background-image: linear-gradient(rgb(193, 196, 237),rgb(116, 180, 210) );
+    background-color: rgb(144 154 255);
+    /*background-image: linear-gradient(rgb(193, 196, 237),rgb(116, 180, 210) );*/
     border-radius: 2em;
     text-align: left;
     padding: 0 0 2em 2em;
