--- a/src/main/resources/templates/css/edit-project-tasks.css
+++ b/src/main/resources/templates/css/edit-project-tasks.css
@@ -19,8 +19,8 @@ section.volunteers-container {
 
 
 section.tasks-container, section.volunteers-container-in, section.volunteers-container {
-    background-color: rgb(173, 178, 229);
-    background-image: linear-gradient(rgb(173, 178, 229),rgb(115,124,255) );
+    background-color: #d5c8f5;
+   /* background-image: linear-gradient(rgb(173, 178, 229),rgb(115,124,255) );*/
     border-radius: 2em;
     text-align: center;
     height:100%;
@@ -48,8 +48,8 @@ section.volunteers-container {
 }
 
 .task, .volunteer {
-    background-color: rgb(173, 178, 229);
-    background-image: linear-gradient(rgb(193, 196, 237),rgb(116, 180, 210) );
+    background-color: rgb(144 154 255);
+   /* background-image: linear-gradient(rgb(193, 196, 237),rgb(116, 180, 210) );*/
     border-radius: 2em;
     text-align: left;
     padding: 0 0 2em 2em;
@@ -131,13 +131,20 @@ div.volunteer button,
 div.tasks-buttons-container button {
     color:white;
     height:2em;
-    background-color: rgba(101,85,143,1.0);
+    background-color: rgb(155, 125, 231);
     cursor: pointer;
     box-shadow: rgba(0, 0, 0, 0.35) 0px -7px 10px 0px inset;
     transition: background-color 0.3s ease;
     border:0;
     border-radius:0.5em;
     cursor: pointer;
+}
+
+div.volunteer button:hover,
+div.tasks-buttons-container button:hover {
+
+    background-color:rgb(131, 102, 204);
+
 }
 
 div.tasks-buttons-container button {
