--- a/src/main/resources/templates/css/organisation-profile.css
+++ b/src/main/resources/templates/css/organisation-profile.css
@@ -9,8 +9,8 @@ h4 {
 }
 
 section.profile-details, section.profile-desc {
-    background-color: rgb(173, 178, 229);
-    background-image: linear-gradient(rgb(173, 178, 229),rgb(115,124,255) );
+    background-color: #d5c8f5;
+    /*background-image: linear-gradient(rgb(173, 178, 229),rgb(115,124,255) );*/
     border-radius: 2em;
     position:relative;
     box-shadow: 0.5em 0.5em 2em rgba(101,85,143,0.80);
@@ -26,7 +26,7 @@ div.profile-header {
 }
 
 div.profile-data {
-    background-color: rgb(247, 242, 250);
+    background-color: rgb(241, 224, 250);
     border-radius: 2em;
     display:grid;
     grid-template-columns: 30% 30% 30%;
@@ -75,7 +75,7 @@ div.text-container > button.profile-edit-button {
     right:0;
     bottom:0;
     color:white;
-    background-color: rgba(101,85,143,1.0);
+    background-color: rgb(155, 125, 231);
     cursor: pointer;
     box-shadow: rgba(0, 0, 0, 0.35) 0px -7px 10px 0px inset;
     transition: background-color 0.3s ease;
@@ -83,3 +83,6 @@ div.text-container > button.profile-edit-button {
     border:0;
 }
 
+div.text-container > button.profile-edit-button:hover {
+    background-color: rgb(131, 102, 204);
+}
