--- a/src/main/resources/templates/css/volunteer-home.css
+++ b/src/main/resources/templates/css/volunteer-home.css
@@ -6,8 +6,8 @@
 }
 
 div.project {
-    background-color: rgba(115,124,211,0.59);
-    background-image: linear-gradient(rgb(173, 178, 229),rgb(115,124,255) );
+    background-color: #d5c8f5;
+    /*background-image: linear-gradient(rgb(173, 178, 229),rgb(115,124,255) );*/
     display:grid;
     grid-template-columns: 40% 50%;
     padding:2em;
@@ -30,7 +30,7 @@ div.project {
 }
 
 .project-join-button, .project-desc-button {
-    background-color: rgb(101, 85, 143);
+    background-color: rgb(155, 125, 231);
     border:0;
     height:3rem;
     width:8rem;
@@ -40,13 +40,18 @@ div.project {
     right:5%;
     bottom:5%;
     cursor: pointer;
+    transition: bacground-color 0.3s ease;
+}
+
+.project-join-button:hover, .project-desc-button:hover {
+    background-color: rgb(131, 102, 204);
 }
 
 .project-short-desc {
-    display: -webkit-box;       /* Użycie boxów dla ograniczenia linii */
-    -webkit-box-orient: vertical; /* Ustawienie kierunku */
-    overflow: hidden;           /* Ukrywa nadmiar tekstu */
-    -webkit-line-clamp: 5;      /* Liczba widocznych linii */
+    display: -webkit-box;      
+    -webkit-box-orient: vertical; 
+    overflow: hidden;           
+    -webkit-line-clamp: 5;      
     text-overflow: ellipsis; 
     max-height: 300px;
     white-space: normal;
