--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,7 +13,7 @@
     <header class="header">
 
         <div class="logo-container">
-            <img src="images/logo.png" alt="logo" class="logo">
+            <img src="images/logotst.png" alt="logo" class="logo">
         </div>
 
         <nav class="nav-menu">
@@ -103,24 +103,6 @@
             console.log(error);
         }
 
-    }
-
-    async function getId(){
-        try {
-            const response = await fetch("http://localhost:8080/api/login/getId", {
-                method: "GET",
-                'Content-Type': 'application/json',
-            });
-
-            if (response.ok){
-                const result = await response.text();
-                console.log(result);
-            } else {
-                console.log("cos nie poszlo");
-            }
-        } catch (error){
-            console.log(error)
-        }
     }
 
 </script>
