--- a/src/main/resources/templates/organisation_home.html
+++ b/src/main/resources/templates/organisation_home.html
@@ -77,6 +77,23 @@
 
                 if (response.ok) {
                     const result = await response.json();
+
+                    if (Object.keys(result).length == 0 ) {
+
+                        const projectDiv = document.createElement("div");
+                        projectDiv.classList.add("project");
+
+                        const textSection = document.createElement("section");
+                        textSection.classList.add("text-container");
+
+                        textSection.innerHTML = "Nie masz jeszcze stworzonych projektów.";
+
+                        projectDiv.appendChild(textSection);
+
+                        root1.appendChild(projectDiv);
+
+                    }
+
                     result.forEach(project => {
                         console.log(project);
 
